--- a/packages/superagent-wrapper/tsconfig.json
+++ b/packages/superagent-wrapper/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "../../tsconfig.json",
   "include": ["src/**/*", "test/**/*"],
   "compilerOptions": {
+    "strictNullChecks": true,
+    "exactOptionalPropertyTypes": true,
     "lib": ["dom", "es2019"],
     "outDir": "dist",
     "noUncheckedIndexedAccess": false
